# PhantomVault

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  pyproject.toml  start_session.sh
.github/workflows/: ci.yml
docs/: AUDIT_PLAN.md  SECURITY.md  THREAT_MODEL.md  VAULT_FORMAT_v1.md  VERSIONING.md
phantom_core/: Cargo.toml
phantom_core/fuzz/: Cargo.toml
phantom_core/fuzz/src/: fuzz_crypto.rs  fuzz_header.rs  fuzz_hmac.rs  fuzz_shamir.rs
phantom_core/src/: crypto.rs  header.rs  hmac.rs  input.rs  lib.rs  memory.rs  shamir.rs
phantom_core/tests/: integration_test.rs
phantomvault/: __init__.py  auth.py  cli.py  hibernation.py  modes.py  obfuscation.py  stealth.py  vault.py  vault_region.py
phantomvault/container/: __init__.py  portable.py
phantomvault/utils/: __init__.py  aliases.py  warnings.py
scripts/: check_env.sh  setup.sh
