[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "phantomvault"
version = "1.0.0"
description = "Encrypted file vault with Rust cryptographic core"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyotp>=2.9",
    "qrcode>=7.4",
    "Pillow>=10.0",
]

[project.scripts]
phantomvault = "phantomvault.cli:app"

[tool.maturin]
manifest-path = "phantom_core/Cargo.toml"
python-source = "."
module-name = "phantomvault.phantom_core"
features = ["pyo3/extension-module"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests", "phantomvault"]
python_files = ["test_*.py"]
